feat(search): added search by footprint
* chore(deps) : added dependencies to template

* chore(config): updated config tepmlates for pg

* fix(lint): fixed lint config

* feat(data): added db access

* refactor(lint): modified to fix lint issue

* fix(migration): fixed migration name

* feat(images): added images controller and logic

* chore(cleanup): clean up and readme

* feat(swagger): updated  to use mc models server

* fix: small fixes

* chore(cr): updated for code review

* fix(docker): fixed docker health check

* feat(search): added footprint search to repo

* chore(lint): cleared lint warning

* fix(search): fixed footprint type in search query

* fix(search): add srid for compitabily with old pg

* feat(search): added footprint search api

* chore(swagger): added search response model

* chore(test): updated test data

* chore(test): added search unit test

* chore(cleanup): some cleaning

* chore(cr): updated for code review
