# src/models/searchOptions.ts
@@ -1,0 +1,11 @@
+import { Geometry } from "geojson";
+
+
+export class SearchOptions{
+
+    public geometry?: Geometry;
+
+    public constructor(init?: Partial<SearchOptions>) {
+        Object.assign(this, init);
+      }
+}
