# src/routers/Images.ts
@@ -11,6 +11,7 @@ imagesRouter.put('/', validate, controller.update.bind(controller));
 imagesRouter.get('/:id', validate, controller.get.bind(controller));
 imagesRouter.delete('/:id', validate, controller.delete.bind(controller));
 imagesRouter.get('/exists/:id', validate, controller.exists.bind(controller));
+imagesRouter.post('/search',validate, controller.search.bind(controller));
 
 
 export { imagesRouter as ImagesRouter };
